--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
